--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Ana Ariel</h1>
+
+    <div class="parallax">
+        <main>
+            <section class=" module parallax imagem">
+                <h1>Ana Ariel</h1>
+            </section>
+
+            <section class=" module texto">
+                <div class="container">
+                <h3>Sobre Mim</h3>  
+                <p>Meu nome é Ana Ariel Avila Escobar, tenho 17 anos e moro na cidade de Feliz. Tenho uma grande paixão por gatos, tenho um siamês chamado Teddy. No meu tempo livre adoro ler, olhar séries, escrever poesias e pintar enquanto escuto música. Gosto muito do artista Van Gogh, admiro suas obras e tudo que o envolve.
+                </p>
+                <br>
+                <br>
+                <a href="livros.html" target="_blank" class="menu">Livros Favoritos</a>
+                <a href="musicas.html" target="_blank" class="menu">Músicas Favoritas</a>
+                <a href="series.html" target="_blank" class="menu">Séries Favoritas</a>
+                </div>
+            </section>
+
+        </main>
+    </div>
     
+    
+
+
 </body>
 </html>
