--- a/livros.html
+++ b/livros.html
@@ -7,8 +7,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
+
 </head>
-<body>
+<body class="livro">
 
     <div class="parallax">
         <main>
@@ -23,8 +24,36 @@
     <p class="frase">"A coisa mais perturbadora sobre o tempo é que nunca é o bastante. Talvez seja abreviada por uma década, ou talvez por apenas um momento. Mas a vida de uma pessoa sempre acaba cedo demais."</p>
     <br>
 
-    <div class="container">
+    <div class="container-1">
         <div class="descrição">
+            <p>O livro A vida invisível de Addie Larue conta a história de uma personagem que faz um pacto com a escuridão: a vida eterna sob a condição de ser esquecida por quem a conhecer.<br>
+                Essa história é uma das melhores que li até o momento, é linda, poética e emocionante e não tenho palavras para descrever o quanto amo este livro e o quanto me marcou. Uma grande reflexão sobre a vida e as marcas que deixamos no mundo, tendo um pouco de tudo que há de melhor: arte, história, música e personagens extremamente cativantes. Sem dúvidas é um livro que vale muito a pena ler.
+            </p>
+            <br>
+            <p>Citações favoritas:</p>
+            <br>
+            <p class="frase-2">“Esquecer é uma coisa triste. Mas é muito solitário ser esquecido. Lembrar-se de tudo, quando ninguém mais se lembra.”
+            </p>
+            <br>
+            <p class="frase-3"> “Ela descobriu que os livros são uma maneira de se viver milhares de vidas diferentes – ou de encontrar forças para viver uma muito longa.”
+            </p>
+            <br>
+            <p class="frase-4"> “Cidades pequenas propiciam vidas pequenas. E algumas pessoas não se incomodam com isso. Gostam de saber onde estão pisando. Mas se você só segue os passos dos outros, não pode encontrar o próprio caminho. Não pode deixar a sua marca.”
+            </p>
+
+        </div>
+        <div class="imagem">
+            <img src="Addie.jpeg" alt="Imagem">
+        </div>
+    </div>
+
+    <h2>2. Incendeia-me</h2>
+    <br>
+    <p class="frase">"A coisa mais perturbadora sobre o tempo é que nunca é o bastante. Talvez seja abreviada por uma década, ou talvez por apenas um momento. Mas a vida de uma pessoa sempre acaba cedo demais."</p>
+    <br>
+
+    <div class="container-1">
+        <div class="descrição-2">
             <p>O livro A vida invisível de Addie Larue conta a história de uma personagem que faz um pacto com a escuridão: a vida eterna sob a condição de ser esquecida por quem a conhecer.
                 Essa história é uma das melhores que li até o momento, é linda, poética e emocionante e não tenho palavras para descrever o quanto amo este livro e o quanto me marcou. Uma grande reflexão sobre a vida e as marcas que deixamos no mundo, tendo um pouco de tudo que há de melhor: arte, história, música e personagens extremamente cativantes. Sem dúvidas é um livro que vale muito a pena ler.
             </p>
