--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="parallax">
         <main>
             <section class=" module parallax imagem">
-                <h1>Ana Ariel</h1>
+                <h1 class="home">Ana Ariel</h1>
             </section>
 
             <section class=" module texto">
                 <div class="container">
                 <h3>Sobre Mim</h3>  
-                <p>Meu nome é Ana Ariel Avila Escobar, tenho 17 anos e moro na cidade de Feliz. Tenho uma grande paixão por gatos, tenho um siamês chamado Teddy. No meu tempo livre adoro ler, olhar séries, escrever poesias e pintar enquanto escuto música. Gosto muito do artista Van Gogh, admiro suas obras e tudo que o envolve.
+                <p>Meu nome é Ana Ariel Avila Escobar, tenho 17 anos e moro na cidade de Feliz. No meu tempo livre adoro ler, olhar séries, escrever poesias e pintar enquanto escuto música. Gosto muito do artista Van Gogh, admiro suas obras e tudo que o envolve.
                 </p>
                 <br>
                 <br>
@@ -37,3 +37,5 @@
 
 </body>
 </html>
+
+
