--- a/livros.html
+++ b/livros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -14,7 +14,7 @@
     <div class="parallax">
         <main>
             <section class=" module parallax imagem-2">
-                <h1>Livros Favoritos</h1>
+                <h1 class="livros">Livros</h1>
             </section>
         </main>
     </div>
@@ -30,7 +30,7 @@
                 Essa história é uma das melhores que li até o momento, é linda, poética e emocionante e não tenho palavras para descrever o quanto amo este livro e o quanto me marcou. Uma grande reflexão sobre a vida e as marcas que deixamos no mundo, tendo um pouco de tudo que há de melhor: arte, história, música e personagens extremamente cativantes. Sem dúvidas é um livro que vale muito a pena ler.
             </p>
             <br>
-            <p>Citações favoritas:</p>
+            <p>Citações:</p>
             <br>
             <p class="frase-2">“Esquecer é uma coisa triste. Mas é muito solitário ser esquecido. Lembrar-se de tudo, quando ninguém mais se lembra.”
             </p>
@@ -49,19 +49,93 @@
 
     <h2>2. Incendeia-me</h2>
     <br>
-    <p class="frase">"A coisa mais perturbadora sobre o tempo é que nunca é o bastante. Talvez seja abreviada por uma década, ou talvez por apenas um momento. Mas a vida de uma pessoa sempre acaba cedo demais."</p>
+    <p class="frase">"Meus olhos estão se enchendo depressa com lágrimas e eu pisco e pisco, mas o mundo está uma bagunça e eu quero rir porque tudo em que consigo pensar é em como é horrível e lindo, que nossos olhos embaçam a verdade quando não aguentamos ver."
+    </p>
     <br>
 
     <div class="container-1">
-        <div class="descrição-2">
-            <p>O livro A vida invisível de Addie Larue conta a história de uma personagem que faz um pacto com a escuridão: a vida eterna sob a condição de ser esquecida por quem a conhecer.
-                Essa história é uma das melhores que li até o momento, é linda, poética e emocionante e não tenho palavras para descrever o quanto amo este livro e o quanto me marcou. Uma grande reflexão sobre a vida e as marcas que deixamos no mundo, tendo um pouco de tudo que há de melhor: arte, história, música e personagens extremamente cativantes. Sem dúvidas é um livro que vale muito a pena ler.
+        <div class="descrição">
+            <p>Incendeia-me é o terceiro livro da série Estilhaça-me. A história se passa num mundo ditópico onde a sociedade está em colapso devido a mudanças climáticas e crises políticas. A protagonista, Juliette Ferrars, possui um toque letal, o que a torna uma arma perigosa nas mãos do governo autoritário. No decorrer da história, Juliette descobre que não é a única com habilidades especiais e se envolve em uma rebelião contra o regime opressor.<br>
+            O terceiro livro é marcado mais pela união dos personangens antes da real rebelião começar, então tem muitos momentos descontraídos e emocionantes, por esse motivo se tornou meu favorito.
+            </p>
+            <br>
+            <p>Citações:</p>
+            <br>
+            <p class="frase-2">“Há um tipo esquisito de liberdade no escuro; uma vulnerabilidade aterrorizante que permitimos a nós mesmos exatamente no momento errado, enganados pela escuridão, pensando que ela guardará nossos segredos. Esquecemos que a escuridão não é um lençol; esquecemos que o sol nascerá logo.”
+            </p>
+            <br>
+            <p class="frase-3"> “Palavras, eu penso, são criaturas muito imprevisíveis. Nenhuma arma, nenhuma espada, nenhum exército nem rei um dia será mais poderoso que uma frase. As espadas podem cortar e matar, mas as palavras vão golpear e ficar, enterrando-se em nossos ossos para virarem corpos mortos que carregamos para o futuro, sempre cavando e sem conseguir arrancar seus esqueletos de nossa carne.”
             </p>
         </div>
         <div class="imagem">
-            <img src="Addie.jpeg" alt="Imagem">
+            <img src="ignite-me.png" alt="Imagem">
         </div>
     </div>
+
+    <h2>3. Purple Hyacinth</h2>
+    <br>
+    <p class="frase">"A justiça não é sobre o que é certo ou errado. É sobre quem tem poder o suficiente para definir o que é certo ou errado."</p>
+    <br>
+
+    <div class="container-1">
+        <div class="descrição">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mQ2fa_i603E?si=VXP2EticSk4YD9vb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="imagem">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gFncXg0zwuU?si=hygKs400mqqyo3b3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <br>
+    </div>
+
+    <p class="livro-3">Purple Hyacinth é um webtoon criado por Ephemerys e Sophism. A história acompanha a protagonista Lauren Sinclair, uma policial que tem a habilidade de detectar mentiras. Ao longo da história Lauren se vê obrigada a se aliar ao maior assassino da cidade por um bem maior, derrubar a facção Foice Fantasma. A organização é conhecida por seus métodos implacáveis e por controlar várias atividades criminosas, incluindo o tráfico de drogas e assassinatos. A Foice Fantasma representa uma ameaça constante para os protagonistas, enquanto eles lutam para expor a verdade e trazer justiça para a cidade.</p>
     
+    <h2>4. Trono de Vidro</h2>
+    <br>
+    <p class="frase">"Talvez houvesse magia irrefreável e inerente à música e à arte."</p>
+    <br>
+
+    <div class="container-1">
+        <div class="descrição">
+            <p>Trono de Vidro é uma série de fantasia escrita por Sarah J. Maas. A história acompanha a jornada de Celaena Sardothien, uma assassina habilidosa que é recrutada pelo príncipe de Adarlan para competir em um torneio mortal e se tornar a campeã real. Ao longo da série, Celaena se envolve em conspirações, batalhas épicas e descobre segredos obscuros sobre seu passado e o mundo ao seu redor.<br>
+            Essa série é um conjunto perfeito de tudo que mais amo nos livros. Um universo de fantasia incrível, histórias emocionantes, romance, momentos épicos e, o melhor de todos, uma protagonista forte, corajosa e ousada. A cada livro lido me senti ainda mais imersa no mundo dessa obra, se tornando rapidamente minha fantasia favorita.
+            </p>
+            <br>
+            <p>Citações:</p>
+            <br>
+            <p class="frase-2">"Havia bondade nas pessoas, lá no fundo, sempre havia um fiapo de bondade. Tinha de haver."
+            </p>
+            <br>
+            <p class="frase-3"> "Bibliotecas estão cheias de ideias, talvez seja a mais poderosa e perigosa de todas as armas."
+            </p>
+        </div>
+        <div class="imagem">
+            <img src="TOG.png" alt="Imagem">
+        </div>
+    </div>
+
+    <h2>5. Fourth Wing</h2>
+    <br>
+    <p class="frase">"Um dragão sem seu cavaleiro é uma tragédia.<br>
+        Um cavaleiro sem seu dragão está morto.""
+    </p>
+    <br>
+
+    <div class="container-1">
+        <div class="descrição">
+            <p>Fourth Wing, primeiro volume da série literária The Empyrean escrita por Rebecca Yarros, se passa num mundo de fantasia, onde dragões e humanos coexistem.O livro acompanha a protagonista Violet Sorrengail, uma jovem determinada a seguir os passos de seu pai e estudar no Quadrante dos Escribas no Colégio de Guerra Basgiath. No entanto, sua mãe, a General Comandante, a direciona para o Quadrante dos Cavaleiros, onde os alunos são treinados para se tornarem cavaleiros de dragões. Violet enfrenta desafios mortais, forma alianças e se vê envolvida em uma trama repleta de perigos, romance e reviravoltas. O enredo promete uma história de aventura, intriga e descobertas emocionantes em um universo fascinante de dragões e academia de guerra.
+            </p>
+            <br>
+            <p>Citações:</p>
+            <br>
+            <p class="frase-2">"A esperança é uma coisa inconstante e perigosa. Ela rouba seu foco e direciona-o para as possibilidades, em vez de mantê-lo onde ele pertence: nas probabilidades."
+            </p>
+        </div>
+        <div class="imagem">
+            <img src="FourthWing.png" alt="Imagem">
+        </div>
+    </div>
+
 </body>
 </html>
+
